--- a/views/index.html
+++ b/views/index.html
@@ -5,12 +5,13 @@
 		<meta name="viewport" content="width=50px, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Klathrate Invoice</title>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<header>
 			<h1>Klathrate Invoice</h1>
 		</header>
-		<hr />
-		
+        <hr />
+            
 	</body>
 </html>
