--- a/views/index.html
+++ b/views/index.html
@@ -5,13 +5,85 @@
 		<meta name="viewport" content="width=50px, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Klathrate Invoice</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="/public/css/lib/style.css" />
 	</head>
 	<body>
 		<header>
 			<h1>Klathrate Invoice</h1>
 		</header>
-        <hr />
-            
+		<hr />
+		<div class="container">
+			<h5>hello hello hello hello hello</h5>
+
+			<hr />
+			<h5>*Required Fields</h5>
+
+			<h1>hello hello hello hello hello</h1>
+
+			<form>
+					First name:<br>
+					<input type="text" name="firstname">
+					<br>
+					Last name:<br>
+					<input type="text" name="lastname">
+				  </form>
+		
+				  <form action="/action_page.php">
+					<input type="checkbox" name="authorize" value="right"> helo hello hello hello <br>
+					
+					<!-- <input type="submit" value="Submit"> -->
+				  </form>
+
+			<h2>hello hello hello </h5>
+				<h2>HTML Table</h2>
+
+				<table>
+				  <tr>
+					<th>Company</th>
+					<th>Contact</th>
+					<th>Country</th>
+				  </tr>
+				  <tr>
+					<td>Alfreds Futterkiste</td>
+					<td>Maria Anders</td>
+					<td>Germany</td>
+				  </tr>
+				  <tr>
+					<td>Centro comercial Moctezuma</td>
+					<td>Francisco Chang</td>
+					<td>Mexico</td>
+				  </tr>
+				  <tr>
+					<td>Ernst Handel</td>
+					<td>Roland Mendel</td>
+					<td>Austria</td>
+				  </tr>
+				  <tr>
+					<td>Island Trading</td>
+					<td>Helen Bennett</td>
+					<td>UK</td>
+				  </tr>
+				  <tr>
+					<td>Laughing Bacchus Winecellars</td>
+					<td>Yoshi Tannamuri</td>
+					<td>Canada</td>
+				  </tr>
+				  <tr>
+					<td>Magazzini Alimentari Riuniti</td>
+					<td>Giovanni Rovelli</td>
+					<td>Italy</td>
+				  </tr>
+				</table>
+				
+		<h2>hello hello hello hello </h2>
+
+		<div class="div1">hello hello hello hello hello hello hello </div>
+		<br>
+		<div class="div1">hello hello hello hello hello hello hello </div>
+		<br>
+		<div class="div1">hello hello hello hello hello hello hello </div>
+
+		<button type="button" onclick="alert('Sent')">Send validating response</button>
+		</div>
 	</body>
 </html>
